# pocket-tts-ios

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PORTING_STATUS.md  README.md  build.rs  codecov.yml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: release.md
.github/workflows/: docs.yml  ios.yml  release.yml  rust.yml  security.yml  validation.yml
.hooks/: pre-commit  pre-push
autotuning/: README.md  autotune.py  bootstrap_memory.py  memory.json.bak.20260313093816  memory.py  program.md  results.tsv.bak.20260313093816  scorer.py
benchmark-results/: latency_streaming_20260126_210042.json  latency_sync_20260313_192342.json
cmake/: ios-device.toolchain.cmake  ios-init.cmake  ios-simulator.toolchain.cmake
docs/: INTEGRATION.md  KNOWLEDGE_INDEX.md  LATENCY_TESTING.md  RELEASE_PROCESS.md  project-story.md
docs/audit/: cleanup-audit-report-1.md  cleanup-audit-report-2.md  research-advisor-report-1.md  research-advisor-report-2.md  verification-report-1.md  verification-report-2.md  verification-report-3.md
docs/prompts/: AGENT_ORCHESTRATION.md  cleanup-audit.md  progress-tracker.md  (+2 more)
scripts/: build-ios.sh  download-model.py  hook-audit.sh  install-hooks.sh  package-release.sh  run-latency-bench.sh
src/: audio.rs  audio_analysis.rs  audio_tests.rs  config.rs  config_tests.rs  engine.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  pocket_tts.udl  tokenizer.rs
swift/: PocketTTSSwift.swift
validation/: README.md  baseline_tracker.py  capture_deterministic.py  capture_eos_trajectory.py  capture_hidden_states.py  capture_layer_by_layer_step36.py  compare_flownet_step0.py  compare_intermediates.py  compare_mimi_outputs.py  compare_outputs.py  compare_runs.py  compare_stages.py  compare_waveforms.py  denormalized_latents.npy  dump_all_latents.py  dump_attention.py  dump_attention_layer0.py  dump_flownet_zeros.py  dump_intermediates.py  dump_layer0_full.py  dump_mimi_intermediates.py  dump_step0.py  establish_baseline.sh  gen_reference.py  generate_reference_audio.py  generate_reference_zeros.py  python_batch_output.npy  python_latents.f32  python_mimi_output.npy  quality_metrics.py  reference_harness.py  requirements.txt  run1_results.json  run1_results_revised.json  run_quality_check.sh  run_tests.sh  stage_decoder_transformer.f32  stage_final_audio.npy  stage_output_proj.f32  stage_upsample_raw.npy  (+5 more)
(+85 files in other folders)
