[package]
name = "pocket-tts-ios"
version = "0.4.0"
edition = "2021"
authors = ["UnaMentis (iOS integration)", "babybirdprd (original Rust/Candle port)"]
description = "Kyutai Pocket TTS for iOS via Candle"
license = "MIT"
repository = "https://github.com/UnaMentis/pocket-tts-ios"

[lib]
name = "pocket_tts_ios"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Candle ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Model loading
safetensors = "0.4"

# Regex for tokenization (pure Rust, no C deps)
regex = "1.10"

# SentencePiece tokenization (required for proper subword tokens)
sentencepiece = "0.12"

# Audio processing
hound = "3.5"
rubato = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI bindings
uniffi = { version = "0.28", features = ["cli"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async (for streaming)
tokio = { version = "1.0", features = ["sync", "rt"], optional = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
default = []
metal = ["candle-core/metal"]
streaming = ["tokio"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[[bin]]
name = "test-tts"
path = "src/bin/test_tts.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# =============================================================================
# Linting Configuration
# =============================================================================

[lints.rust]
# Allow unsafe code - required for FFI (UniFFI) and mmap operations
unsafe_code = "allow"

[lints.clippy]
# Correctness - always fix these
correctness = { level = "deny", priority = -1 }

# Suspicious patterns - warn
suspicious = { level = "warn", priority = -1 }

# Performance issues - warn
perf = { level = "warn", priority = -1 }

# Style - warn (not deny)
style = { level = "warn", priority = -1 }

# Complexity - allow for ML code (complex operations are inherent)
complexity = { level = "allow", priority = -1 }

# Pedantic - too strict for existing codebase, disable
pedantic = { level = "allow", priority = -1 }

# Development markers - warn so we catch them
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
